<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="label_calcular_imc">Body Mass Index</string>
    <string name="label_sexo">Sex</string>
    <string name="checkbox_masculino">Male</string>
    <string name="checkbox_feminino">Female</string>
    <string name="label_idade">Age</string>
    <string name="label_altura">Height</string>
    <string name="label_peso">Weight</string>
    <string name="botao_calcular">Calculate</string>
    <string name="botao_voltar">Back</string>
    <string name="label_resultado">Your BMI is </string>
    <string name="labelMessageErrorMandatory">Field {0} must be filled</string>
    <string name="label_classificacao">Your Classification is </string>
    <string name="label_resultado_teste">Test Results</string>

    <string name="label_magreza">Essential Fat</string>
    <string name="label_normal">Fit</string>
    <string name="label_sobrepeso">Overweight</string>
    <string name="label_obesidade">Obesity</string>
    <string name="label_obesidade_grave">Super Obesity</string>
    <string name="content_description_sexo_masculino">Male Sex</string>
    <string name="content_description_sexo_feminino">Female Sex</string>
    <string name="content_description_calcular_imc">Calculate BMI</string>
</resources>
